--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <h5 class="card-header">Special Offer</h5>
     <div class="card-body">
       <h5 class="card-title">10% off when you book today!</h5>
-      <p class="card-text">10% off any package when you book a session befor the end of March.</p>
+      <p class="card-text">10% off any package when you book a session before the end of March.</p>
       <a href="#" class="btn btn-dark btn-lg download-button">Get 10% Off Today!</a>
       </div>
     </div>
