--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
 
 <head>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GMX7MFV46T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GMX7MFV46T');
+</script>
+
   <meta charset="utf-8">
   <title>GA Grad Photos</title>
   <link rel="shortcut icon" type="image/svg" href="images/POP Triangle Logo Small.svg"/>
