--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   gtag('config', 'G-GMX7MFV46T');
 </script>
-
+  <meta name="description" content="Photographer in the North Georgia area who specializes in Senior and Graduation photos and photography.">
   <meta charset="utf-8">
   <title>GA Grad Photos</title>
   <link rel="shortcut icon" type="image/svg" href="images/POP Triangle Logo Small.svg"/>
