--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <!--10% off alert-->
 
-  <div id="promotional-card" class="card">
+  <!--<div id="promotional-card" class="card">
     <div class="col-lg-12 col-md-12 col-sm-12">
     <h5 class="card-header">Special Offer</h5>
     <div class="card-body">
@@ -98,7 +98,7 @@
       <a href="mailto:tyler@pouroverphoto.com?subject=Special Offer" class="btn btn-dark btn-lg download-button">Get 10% Off Today!</a>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Features -->
 
